--- a/tasks/docker-reqs.yml
+++ b/tasks/docker-reqs.yml
@@ -1,16 +1,20 @@
 ---
 - name: "Install docker + reqs"
-  apt: name="{{ item }}" update_cache=yes state=latest
+  apt:
+    name: "{{ item }}"
+    #update_cache=yes
+    state: latest
   with_items:
     - docker-engine
     - python-pip
-  tags:
-    - apt
+
+- name: "Upgrade pip"
+  pip:
+    name: pip
+    extra_args: "--upgrade"
 
 - name: "Install docker-py"
   pip:
     name: docker-py
     state: present
-    version: 1.7.0
-  tags:
-    - pip
+    version: "{{ docker_py_version }}"
