--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for ansible-role-docker-registrator
 
 - fail: "msg=\"This role requires shelleg context - read more at http:// url to docs\""
-  when: "shelleg is undefined or shelleg_hosts is undefined"
+  when: "shelleg is undefined or hosts is undefined"
 
 - include: docker-reqs.yml
 
@@ -13,7 +13,7 @@
     consul_port: "{{ consul_port | d('8500') }}"
   when: ("{{ item.consul_leader }}" == "true")
   with_items:
-  - "{{ shelleg_hosts.infra }}"
+  - "{{ hosts.infra }}"
 
 - debug:
     var: consul_leader_hostname
@@ -41,3 +41,11 @@
     - "{{ consul_port }}:{{ consul_port }}"
     - "8600:8600/udp"
     command: "{{ consul_cmd }}"
+
+- name: "reload dnsmasq for consul domain forwarding to take affect - check dnsmasq is running"
+  shell: "systemctl dnsmasq status"
+  register: dnsmasq_service_stat
+
+- name: "reload dnsmasq for consul domain forwarding to take affect - if running restart"
+  shell: "systemctl restart dnsmasq"
+  when: dnsmasq_service_stat.rc == 0
